Add data project with EF core.

--- a/StatelessWebAPI/appsettings.Development.json
+++ b/StatelessWebAPI/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GameDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RedisConnection": "localhost"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
