--- a/StatelessWebAPI/StatelessWebAPI.csproj
+++ b/StatelessWebAPI/StatelessWebAPI.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StatelessWebAPI.Caching\StatelessWebAPI.Caching.csproj" />
     <ProjectReference Include="..\StatelessWebAPI.Data\StatelessWebAPI.Data.csproj" />
   </ItemGroup>
 
