Refactor cache expiration.

--- a/StatelessWebAPI/appsettings.json
+++ b/StatelessWebAPI/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "CacheDefaultExpirationMinutes": 5
+  // If set to 0 the cache won't expire
+  "CacheExpirationTimeMinutes": 5
 }
